# BI-Demanda

./: .env.example  .gitignore  API.md  AUDITORIA.md  AUTENTICACAO.md  BACKEND.md  DASHBOARD.md  DATABASE.md  DEPLOY.md  DER.md  DESIGN_SYSTEM.md  DICIONARIO_DE_DADOS.md  ETL.md  EXECUCAO_LOCAL.md  FRONTEND.md  GITHUB.md  GRAFICOS.md  HASH.md  IMPORTADOR.md  IMPORT_MAPPING.md  KPIS.md  LOGS.md  MASTER_PROMPT.md  MODELAGEM.md  MODEL_CHANGES.md  PERMISSOES.md  PRIMEIRO_USO.md  PROJECT.md  PROMPTS.md  README.md  REGRAS_DE_NEGOCIO.md  ROADMAP.md  SPEC_INDEX.md  SPRINT_00.md  SPRINT_01.md  SPRINT_02.md  SPRINT_03.md  SPRINT_04.md  SPRINT_05.md  SPRINT_06.md  (+24 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_09_2343_modelagem_inicial_completa.py  2026_07_10_0823_adiciona_empresas.py  2026_07_12_1114_sprint_3_identidade_uuid_e_dados_reais.py  2026_07_13_0247_sprint_4_indices_de_performance_do_.py  2026_07_13_1036_sprint_5_indice_de_busca_de_clientes.py
backend/app/: main.py
backend/app/api/: dependencies.py  error_handlers.py
backend/app/core/: config.py  logging.py
backend/app/domain/: excecoes.py
backend/app/infrastructure/: database.py
backend/etl/: __init__.py  cli.py  inferencia.py  layouts.py  motor.py  resultado.py
backend/tests/: conftest.py  test_cli.py  test_cliente_service.py  test_dashboard_service.py  test_error_handlers.py  test_hash.py  test_health.py  test_migracoes.py  test_models.py  test_qualidade_dados_service.py
database/: README.md
(+168 files in other folders)
